courses/430_programming-languages/assignment-8/tests/error/error47.nex
raspetchatat 1;
peremenaya a;
